fix styling on android https://stackoverflow.com/questions/39384154/calculating-viewport-height-on-chrome-android-with-css

--- a/front-end/src/components/Tabs.css
+++ b/front-end/src/components/Tabs.css
@@ -1,9 +1,9 @@
 .tab {
-  margin-top: 30px;
+  margin-top: 20px;
+  flex: 1;
 }
 
-.navigation {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+.container {
+  display: flex;
+  flex-direction: column;
 }
